--- a/.github/actions/setup-backend/action.yml
+++ b/.github/actions/setup-backend/action.yml
@@ -45,9 +45,9 @@ runs:
           sudo apt-get update && sudo apt-get -y install libldap2-dev libsasl2-dev
           pip install --upgrade pip setuptools wheel uv
           if [ "${{ inputs.requirements-type }}" = "dev" ]; then
-            uv --no-venv pip install -r requirements/development.txt
+            uv --system pip install -r requirements/development.txt
           elif [ "${{ inputs.requirements-type }}" = "base" ]; then
-            uv --no-venv pip install -r requirements/base.txt
+            uv --system pip install -r requirements/base.txt
           fi
         fi
       shell: bash
